--- a/tests/smoke-tests-basic.yaml
+++ b/tests/smoke-tests-basic.yaml
@@ -1,3 +1,6 @@
+# Copyright 2018 Patrick Rudolph <patrick.rudolph@9elements.com>
+# SPDX-License-Identifier: BSD-3-Clause
+
 metadata:
     format: Lava-Test Test Definition 1.0
     name: smoke-tests-basic
