--- a/tests/x86/x86-fwts-tests.yaml
+++ b/tests/x86/x86-fwts-tests.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 
 metadata:
-    format: Lava-Test x86 FWTS Test Definition 1.0
+    format: Lava-Test Test Definition 1.0
     name: x86-fwts-tests
     description: "Basic x86 FWTS system tests"
     maintainer:
@@ -15,22 +15,6 @@ metadata:
 
 run:
     steps:
-              - lava-test-set start fwts-acpi
-              - lava-test-case fwts-checksum --shell fwts checksum -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-acpitables --shell fwts acpitables -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-fadt --shell fwts fadt -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-madt --shell fwts madt -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-rsdp --shell fwts rsdp -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-set stop fwts-acpi
-              - lava-test-set start fwts-sbbr
-              - lava-test-case fwts-acpi_sbbr --shell fwts acpi_sbbr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-acpitables --shell fwts acpitables -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-fadt_sbbr --shell fwts fadt_sbbr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-gtdt --shell fwts gtdt -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-method --shell fwts method -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-spcr --shell fwts spcr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-xsdt --shell fwts xsdt -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-set stop fwts-sbbr
               - lava-test-set start fwts-x86
               - lava-test-case fwts-dmicheck --shell fwts dmicheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
               - lava-test-case fwts-bios32 --shell fwts bios32 -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
