--- a/tests/master.yaml
+++ b/tests/master.yaml
@@ -30,4 +30,15 @@ definitions:
   name: x86-fwts-test
   whitelist:
     CONFIG_ARCH_X86 : y
-
+- repository: https://github.com/9elements/lava-tests.git
+  from: git
+  path: tests/x86/x86-fwts-bios-tests.yaml
+  name: x86-fwts-bios-test
+  whitelist:
+    CONFIG_BOARD_EMULATION_QEMU_X86 : y
+- repository: https://github.com/9elements/lava-tests.git
+  from: git
+  path: tests/x86/x86-fwts-hpet-tests.yaml
+  name: x86-fwts-hpet-test
+  whitelist:
+    CONFIG_HPET_ADDRESS : *
