Replace asterisk with any
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/master.yaml
+++ b/tests/master.yaml
@@ -41,4 +41,4 @@ definitions:
   path: tests/x86/x86-fwts-hpet-tests.yaml
   name: x86-fwts-hpet-test
   whitelist:
-    CONFIG_HPET_ADDRESS : *
+    CONFIG_HPET_ADDRESS : any
