--- a/tests/x86/x86-fwts-bios-tests.yaml
+++ b/tests/x86/x86-fwts-bios-tests.yaml
@@ -16,5 +16,5 @@ metadata:
 run:
     steps:
               - lava-test-set start fwts-bios32
-              - lava-test-case fwts-bios32 --shell fwts bios32 -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
+              - lava-test-case fwts-bios32 --shell fwts bios32 -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
               - lava-test-set stop fwts-bios32
