--- a/tests/x86/x86-fwts-tests.yaml
+++ b/tests/x86/x86-fwts-tests.yaml
@@ -16,9 +16,9 @@ metadata:
 run:
     steps:
               - lava-test-set start fwts-x86
-              - lava-test-case fwts-dmicheck --shell fwts dmicheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-msr --shell fwts msr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-pnp --shell fwts pnp -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-pciirq --shell fwts pciirq -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
-              - lava-test-case fwts-mpcheck --shell fwts mpcheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO
+              - lava-test-case fwts-dmicheck --shell fwts dmicheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
+              - lava-test-case fwts-msr --shell fwts msr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
+              - lava-test-case fwts-pnp --shell fwts pnp -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
+              - lava-test-case fwts-pciirq --shell fwts pciirq -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
+              - lava-test-case fwts-mpcheck --shell fwts mpcheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
               - lava-test-set stop fwts-x86
