--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs: # basic units of work in a run
           name: Deploy Over SSH
           command: |
             scp -r health $SSH_USER@$SSH_HOST:$SSH_PATH
+            scp -r deploy $SSH_USER@$SSH_HOST:$SSH_PATH
   deploy2:
     machine:
         enabled: true
