--- a/tests/smoke-tests-basic.yaml
+++ b/tests/smoke-tests-basic.yaml
@@ -5,7 +5,7 @@ metadata:
     format: Lava-Test Test Definition 1.0
     name: smoke-tests-basic
     description: "Basic system test command for Linux Images. The test runs basic commands
-                  like pwd, uname, vmstat, ifconfig, lscpu, lsusb and lsb_release."
+                  like pwd, uname, vmstat, ifconfig, lscpu and lsusb."
     maintainer:
         - patrick.rudolph@9elements.com
     os:
@@ -22,6 +22,5 @@ run:
         - lava-test-case linux-tools-vmstat --shell vmstat
         - lava-test-case linux-tools-ifconfig --shell ifconfig -a
         - lava-test-case linux-tools-lscpu --shell lscpu
-        - lava-test-case linux-tools-lsb_release --shell lsb_release -a
         - lava-test-set stop linux-tools
 
