tests: More debugging output
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
+++ b/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
@@ -14,6 +14,8 @@ metadata:
         - functional
 run:
     steps:
+        - pwd
+        - find -L
         - go test -test.v usable_memory_test.go
 
 
