test: fix gopath
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
+++ b/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
@@ -23,6 +23,6 @@ run:
         - cp -r ./go-linux-lowlevel-hw go/src/github.com/9elements/
         - pwd
         - find -L
-        - GOPATH=$(pwd) go test -test.v ./tests/mainboard/hp/8200_elite_sff/usable_memory_test.go
+        - GOPATH=$(pwd)/go go test -test.v ./tests/mainboard/hp/8200_elite_sff/usable_memory_test.go
 
 
