tests: dont use cd
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
+++ b/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
@@ -20,7 +20,7 @@ install:
 run:
     steps:
         - mkdir -p go/src/github.com/9elements/
-        - cd go/src/github.com/9elements/; ln -s ../../../../go-linux-lowlevel-hw .
+        - ln -s ../../../../go-linux-lowlevel-hw tests/mainboard/hp/8200_elite_sff/go-linux-lowlevel-hw
         - GOPATH=$(pwd)/go go test -test.v ./tests/mainboard/hp/8200_elite_sff/usable_memory_test.go
 
 
