--- a/tests/mainboard/hp/8200_elite_sff/pci_devices_present.yaml
+++ b/tests/mainboard/hp/8200_elite_sff/pci_devices_present.yaml
@@ -19,6 +19,6 @@ install:
 run:
     steps:
         - mkdir -p go/src/github.com/9elements/
-        - ln -s ../../../../go-linux-lowlevel-hw tests/mainboard/hp/8200_elite_sff/go-linux-lowlevel-hw
+        - ln -s ../../../../go-linux-lowlevel-hw go/src/github.com/9elements/go-linux-lowlevel-hw
         - GOPATH=$(pwd)/go go test -test.v ./tests/mainboard/hp/8200_elite_sff/pci_devices_present_test.go
 
