test: Remove lava-test-case
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
+++ b/tests/mainboard/hp/8200_elite_sff/usable_memory.yaml
@@ -21,6 +21,6 @@ run:
     steps:
         - mkdir -p go/src/github.com/9elements/
         - ln -s ../../../../go-linux-lowlevel-hw go/src/github.com/9elements/go-linux-lowlevel-hw
-        - GOPATH=$(pwd)/go lava-test-case mb-memory-above-4g-test --shell go test -test.v ./tests/mainboard/hp/8200_elite_sff/usable_memory_test.go
+        - GOPATH=$(pwd)/go go test -test.v ./tests/mainboard/hp/8200_elite_sff/usable_memory_test.go
 
 
