tests/x86: Parse FWTS output for error code
FWTS returns a non zero exit code even when no tests are failing.
Parse the log output instead of using the error code and fix a broken
test case on recent FWTS versions as found on Fedora 32.

Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/tests/x86/x86-fwts-tests.yaml
+++ b/tests/x86/x86-fwts-tests.yaml
@@ -16,9 +16,10 @@ metadata:
 run:
     steps:
               - lava-test-set start fwts-x86
-              - lava-test-case fwts-dmicheck --shell fwts dmicheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
-              - lava-test-case fwts-msr --shell fwts msr -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
-              - lava-test-case fwts-pnp --shell fwts pnp -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
-              - lava-test-case fwts-pciirq --shell fwts pciirq -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
-              - lava-test-case fwts-mpcheck --shell fwts mpcheck -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO --log-level high
+              - TEST='fwts $CMD $ADD -q -r stdout --log-filter=SKP,PAS,FAL,ABT,INO,WRN || /bin/true; lava-test-case fwts-$CMD --result $(fwts $CMD $ADD -q --stdout-summary|grep -q FAIL && echo "fail" || echo "pass")'
+              - CMD=dmicheck ADD="--filter-error-discard DMIBadTableLength" eval $TEST
+              - CMD=msr ADD="" eval $TEST
+              - CMD=pnp ADD="" eval $TEST
+              - CMD=pciirq ADD="" eval $TEST
+              - CMD=mpcheck ADD="" eval $TEST
               - lava-test-set stop fwts-x86
