--- a/tests/master.yaml
+++ b/tests/master.yaml
@@ -8,6 +8,12 @@ definitions:
   name: smoke-tests-basic
 - repository: https://github.com/9elements/lava-tests.git
   from: git
+  path: tests/x86/x86-coreboot-tests.yaml
+  name: x86-coreboot-test
+  whitelist:
+    CONFIG_ARCH_X86 : y
+- repository: https://github.com/9elements/lava-tests.git
+  from: git
   path: tests/x86/x86-smbios-tests.yaml
   name: x86-smbios-test
   whitelist:
