--- a/tests/master.yaml
+++ b/tests/master.yaml
@@ -13,6 +13,8 @@ definitions:
   whitelist:
     CONFIG_ARCH_X86 : y
     CONFIG_COLLECT_TIMESTAMPS : y
+  blacklist:
+    CONFIG_UNKOWN_TSC_RATE: y
 - repository: https://github.com/9elements/lava-tests.git
   from: git
   path: tests/x86/x86-smbios-tests.yaml
